Use auth-d user in appointment and booking routes
Also separates user classes with an inheritance hierarchy
instead of old sum type approach
